Fix Main Pages overflow issues

--- a/src/containers/FooderMaster/FooderMaster.module.css
+++ b/src/containers/FooderMaster/FooderMaster.module.css
@@ -1,6 +1,7 @@
 .FoodMasterBody {
   height: 100%;
   margin-bottom: 60px;
+  overflow: hidden;
 }
 
 h2 {
